Publishing Ver 2.0 of Odin Recipes
Added a stylesheet to the project to add a little
pop to the look and feel of the website.

--- a/recipes/crock-pot-chili.html
+++ b/recipes/crock-pot-chili.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Small Crock Pot Chili</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
+        <div class="center">
         <h1>Small Crock Pot Chili</h1>
-        <img src="../img/crock-pot-chili.jpg" height="300" width="300">
-        <h2>Small Crock Pot Chili</h2>
+        <img src="../img/crock-pot-chili.jpg" alt="Bowl of Chili" class="imgcenter" height="300" width="300">
+        <h2>Recipe Description</h2>
         <p>My wife wanted "a great everyday chili." This "All-American" chili has ground beef, kidney beans, traditional chili spicing, and tomato-based sauce. It's perfect for every day, tailgating, or a family get-together.</p>
         <p>A small batch recipe that makes 6 cups of chili (about 4 servings), so it is the "perfect chili for two" and smaller households. It fits in a mini crock pot (2 quarts) but is easy to double or triple in size.</p>
         <h3>Ingredients</h3>
@@ -28,4 +30,8 @@
             <li>Cook covered on low for 8 hours or 4 hours on high.</li>
             <li>Served topped with shredded cheese or there toppings.</li>
         </ol>
+        </div>
+        <div style="text-align: center;">
+            <a href="../index.html">Back to recipes</a>
+        </div>
     </body>
