--- a/recipes/pan-chicken.html
+++ b/recipes/pan-chicken.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Pan Seared Oven Baked Chicken Breast</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
+        <div class="center">
         <h1>Pan Seared Oven Baked Chicken Breast</section></h1>
-        <img src="../img/pan-chicken.jpg" height="300" width="300">
-        <h2>Pan Seared Oven Baked Chicken Breast</h2>
+        <img src="../img/pan-chicken.jpg" alt="Pan Seared Chicken" class="imgcenter" height="300" width="300">
+        <h2>Recipe Description</h2>
         <p>This is how we cooked for many years. We had a freezer in the garage fridge for meat only. I would take out a couple of chicken breasts, a pork tenderloin, and some steaks, let them thaw in the refrigerator for a few days and work our way through them.</p>
         <p>I would get home late from work. But we want a nice dinner on a short timeline. I spend 5-10 minutes of preparation time and usually finish in the oven as I'm unwinding, and in 15-20 minutes, dinner was ready.</p>
         <h3>Ingredients</h3>
         <ul>
-            <li><strong>Chicken Breast - Fresh preferred</li>
+            <li><strong>Chicken Breast</strong> - Fresh preferred</li>
             <li><strong>Seasoning</strong> - salt, black pepper, garlic powder</li>
             <li><strong>Optional Seasoning</strong> - marinades, thyme, rosemary or other herbs and spices</strong></li>
         </ul>
@@ -26,4 +28,8 @@
             <li>Bake for 15-20 minutes until an internal temperature of 165°. The thinner breast will be for 15 minutes, and the bigger ones for about 20 minutes.</li>
             <li>Let rest for 5 minutes before serving.</li>
         </ol>
+        </div>
+        <div style="text-align: center;">
+            <a href="../index.html">Back to recipes</a>
+        </div>
     </body>
