--- a/recipes/strip-steak.html
+++ b/recipes/strip-steak.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>New York Strip Steak</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
+        <div class="center">
         <h1>New York Strip Steak</h1>
-        <img src="../img/strip-steak.jpg" height="300" width="300">
-        <h2>Pan Seared Oven Roasted Strip Steak</h2>
+        <img src="../img/strip-steak.jpg" alt="New York Strip Steak" class="imgcenter" height="300" width="300">
+        <h2>Recipe Description</h2>
         <p>Cook like the best steakhouses. Searing steak in a cast-iron skillet will give you the wonderful flavor of the Millard reaction. Then, finish the steak in the oven to your desired temperature.</p>
         <p>Learn the sear and bake technique with easy step-by-step photo instructions—a foolproof recipe for moist and tender steak every time. For equally great results on the grill, check out How to Grill Strip Steak on a Gas Grill.</p>
         <h3>Ingredients</h3>
@@ -27,5 +29,9 @@
             <li>Transfer the pan to the preheated oven. Now comes the variables: the steak thickness, how long you seared it, and the oven's actual temperature. Cook to the final temperature minus a few degrees—the steaks will rise a few degrees during the rest after cooking.</li>
             <li>Bake for about 5 to 7 minutes to reach 130-135° (medium-rare) or 7 to 9 minutes for 140°-145° (medium). Remove from the oven, tent with foil, and allow to rest for a few minutes before serving. COOK TO THE TEMPERATURE, NOT BY TIME ALONE.</li>
         </ol>
+        </div>
+        <div style="text-align: center;">
+            <a href="../index.html">Back to recipes</a>
+        </div>
     </body>
 </html>
