--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <div class="center">
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/strip-steak.html">Pan Seared Oven Baked New York Strip Steak</a></li>
             <li><a href="recipes/pan-chicken.html">Pan Seared Oven Baked Chicken</a></li>
             <li><a href="recipes/crock-pot-chili.html">Small Crock Pot Chili</a></li>
         </ul>
+        </div>
     </body>
 </html>
