Publishing Ver 2.0 of Odin Recipes
Adjusted a few heading for proper size and titles

--- a/recipes/pan-chicken.html
+++ b/recipes/pan-chicken.html
@@ -12,13 +12,13 @@
         <h2>Recipe Description</h2>
         <p>This is how we cooked for many years. We had a freezer in the garage fridge for meat only. I would take out a couple of chicken breasts, a pork tenderloin, and some steaks, let them thaw in the refrigerator for a few days and work our way through them.</p>
         <p>I would get home late from work. But we want a nice dinner on a short timeline. I spend 5-10 minutes of preparation time and usually finish in the oven as I'm unwinding, and in 15-20 minutes, dinner was ready.</p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li><strong>Chicken Breast</strong> - Fresh preferred</li>
             <li><strong>Seasoning</strong> - salt, black pepper, garlic powder</li>
             <li><strong>Optional Seasoning</strong> - marinades, thyme, rosemary or other herbs and spices</strong></li>
         </ul>
-        <h4>How To Cook A Pan Seared Oven Baked Chicken - Step-by-step</h4>
+        <h2>Step-by-step instructions</h2>
         <ol>
             <li>Preheat the oven to 375° convection or 400° conventional.</li>
             <li>Trim and pat dry the chicken. If the chicken breast is over ¾ inches thick, flatten it with a meat mallet or the bottom of a heavy pan.</li>
