--- a/recipes/strip-steak.html
+++ b/recipes/strip-steak.html
@@ -12,13 +12,13 @@
         <h2>Recipe Description</h2>
         <p>Cook like the best steakhouses. Searing steak in a cast-iron skillet will give you the wonderful flavor of the Millard reaction. Then, finish the steak in the oven to your desired temperature.</p>
         <p>Learn the sear and bake technique with easy step-by-step photo instructions—a foolproof recipe for moist and tender steak every time. For equally great results on the grill, check out How to Grill Strip Steak on a Gas Grill.</p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li><strong>New york Strip Steaks</strong> - about 1 inch thick, choice or prime grade</li>
             <li><strong>Seasoning</strong> - salt, black pepper, garlic powder</li>
             <li><strong>Optional Seasoning</strong> - marinades, thyme, rosemary or other herbs and spices</li>
         </ul>
-        <h4>How To Cook a New York Strip Steak - Step-by-step</h4>
+        <h2>Step-by-step instructions</h2>
         <ol>
             <li>Allow the steaks to rest at room temperature for 30-60 minutes if you have time—preheat the oven to 400° convection or 425° conventional oven.</li>
             <li>Trim any easily trimmable edge fat. Pat dry with paper towels.</li>
