--- a/recipes/crock-pot-chili.html
+++ b/recipes/crock-pot-chili.html
@@ -12,7 +12,7 @@
         <h2>Recipe Description</h2>
         <p>My wife wanted "a great everyday chili." This "All-American" chili has ground beef, kidney beans, traditional chili spicing, and tomato-based sauce. It's perfect for every day, tailgating, or a family get-together.</p>
         <p>A small batch recipe that makes 6 cups of chili (about 4 servings), so it is the "perfect chili for two" and smaller households. It fits in a mini crock pot (2 quarts) but is easy to double or triple in size.</p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li><strong>Ground Beef</strong></li>
             <li><strong>Aromatics</strong> - onion and garlic</li>
@@ -21,7 +21,7 @@
             <li><strong>Bell Peppers Optional</strong></li>
             <li><strong>Spices</strong> - chili powder, cumin, oregano, salt, pepper, cayenne pepper (optional)</li>
         </ul>
-        <h4>How To Make A Small Crock Pot Chili - Step-by-step</h4>
+        <h2>Step-by-step instructions</h2>
         <ol>
             <li>Use ground beef or other ground meat. This recipe fits in a 2-quart mini crock pot but can also be made in a bigger one.</li>
             <li>Chop half of the green bell pepper and a small onion. Rinse and drain one can of light kidney beans.</li>
